--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   font-size: 24px;
-  width: 350px;
+  width: 100%;
   padding: 10px;
   border: 2px solid black;
   border-radius: 5px;
